fix: fix position of dropdown content; fix spacing after footer

--- a/src/components/dropdown/styles.scss
+++ b/src/components/dropdown/styles.scss
@@ -47,8 +47,8 @@
     width: 100%;
     background: $background-color;
     border-radius: 5px;
-    padding: 0 10px;
-    margin: 0;
+    padding: 10px 10px;
+    margin-top: -20px;
     font-size: 18px;
     font-family: $primary-font;
     box-sizing: border-box;
